add build graph and get graph
